[package]
name = "rust-dnf"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A DNF alternative written in Rust"
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.13"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
toml = "0.8"
tokio = { version = "1.0", features = ["full"] }  # For async operations
flate2 = "1.0"  # For decompression
xml-rs = "0.8"  # For parsing repository metadata
walkdir = "2.4"  # For file system operations
chrono = { version = "0.4", features = ["serde"] } 
quick-xml = "0.31"  # For fast XML parsing